# siyi-protocol

./:  QUICKSTART.md  Cargo.toml  LICENSE  MIGRATION.md  PROTOCOL.md  README.md  generate_all.sh  generator.py  siyi_protocol.xml
examples/: deserialize_messages.rs  serialize_messages.rs
src/: a2mini_tcp.rs  a2mini_ttl.rs  a2mini_udp.rs  a8mini_tcp.rs  a8mini_ttl.rs  a8mini_udp.rs  gen_rust_from_xml.py  gen_rust_from_xml_nostd.py  lib.rs  main.rs  siyi_protocol.rs  siyi_protocol.xml  zr10_tcp.rs  zr10_ttl.rs  zr10_udp.rs  zr30_tcp.rs  zr30_ttl.rs  zr30_udp.rs  zt30_tcp.rs  zt30_ttl.rs  zt30_udp.rs  zt6_tcp.rs  zt6_ttl.rs  zt6_udp.rs
