[package]
name = "siyi-protocol"
version = "0.1.0"
edition = "2024"
authors = ["Mohamed A.Taha <Ahmed.Boin@gmail.com>"]
description = "SIYI Gimbal and Camera SDK Protocol"
license = "MIT"
repository = "https://github.com/AhmedBoin/siyi-protocol"
readme = "README.md"
keywords = ["siyi", "no-std"]
categories = ["accessibility", "aerospace"]
documentation = "https://docs.rs/siyi-protocol"
homepage = "https://github.com/AhmedBoin/siyi-protocol"

[dependencies]

[features]
default = []

# Protocols
tcp = []
udp = []
ttl = []

# Cameras
zt30 = []
zt6 = []
zr30 = []
zr10 = []
a8mini = []
a2mini = []

all = ["tcp", "udp", "ttl", "zt30", "zt6", "zr30", "zr10", "a8mini", "a2mini"]

[[example]]
name = "deserialize_messages"
required-features = ["zt30", "tcp"]

[[example]]
name = "serialize_messages"
required-features = ["zt30", "tcp"]
